--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,10 @@
   "require": {
     "php": "^7.4|8.*",
     "ext-json": "*",
-    "symfony/config": "^3.0||^4.0||^5.0||^6.0",
-    "symfony/dependency-injection": "^3.4.26||^4.1.12|^5.0||^6.0",
-    "symfony/http-kernel": "^3.0||^4.0||^5.0||^6.0",
-    "symfony/messenger": "^4.4||^5.0||^6.0",
+    "symfony/config": "^3.0||^4.0||^5.0||^6.0||7.*",
+    "symfony/dependency-injection": "^3.4.26||^4.1.12|^5.0||^6.0||7.*",
+    "symfony/http-kernel": "^3.0||^4.0||^5.0||^6.0||7.*",
+    "symfony/messenger": "^4.4||^5.0||^6.0||7.*",
     "psr/http-client": "^1.0",
     "psr/http-factory": "^1.0",
     "psr/http-message": "^1.0",
